[package]
name = "thue_morse"
version = "0.1.0"
edition = "2024"
authors = ["Austin Heller"]
description = "A library for generating Thue-Morse number sequences for different bases."
readme = "README.md"
repository = "https://github.com/AustinHellerRepo/thue_morse"
license = "MIT OR Apache-2.0"
keywords = ["math", "binary", "iterator", "mathematics", "pattern"]
categories = ["algorithms", "mathematics"]

[dependencies]
